[package]
name = "coingecko-price"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
edition = "2018"
description = "Simple library to fetch price information from Coingecko"
repository = "https://github.com/kumanote/coingecko-price-rs"
readme = "README.md"
keywords = ["coingecko"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
http = "0.2.5"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-rustls = "0.22.1"
rust_decimal = "1.17"

[dev-dependencies.tokio]
version = "1.14.0"
features = ["full"]
